--- a/add-asks.html
+++ b/add-asks.html
@@ -136,44 +136,44 @@
                     <div class="form-group">
                       <label for="">نوع التعليم</label>
                       <select name="" id="" class="form-select" title="اختر">
-                        <option value="">1</option>
-                        <option value="">2</option>
+                        <option value="">اساسي</option>
+                        <option value="">جامعي</option>
                       </select>
                     </div>
                   </div>
                   <div class="col-lg-2 col-md-12 col-12">
                     <label for="">المرحله</label>
                     <select name="" id="" class="form-select" title="اختر">
-                        <option value="">1</option>
-                        <option value="">2</option>
+                        <option value="">الأولي </option>
+                        <option value="">الثانيه</option>
                       </select>
                   </div>
                   <div class="col-lg-2 col-md-12 col-12">
                     <label for="">السنه</label>
                     <select name="" id="" class="form-select" title="اختر">
-                        <option value="">1</option>
-                        <option value="">2</option>
+                        <option value="">الأولي</option>
+                        <option value="">الثانيه</option>
                       </select>
                   </div>
                   <div class="col-lg-2 col-md-12 col-12">
                     <label for="">الماده</label>
                     <select name="" id="" class="form-select" title="اختر">
-                        <option value="">1</option>
-                        <option value="">2</option>
+                        <option value="">الرياضيات</option>
+                        <option value="">الاحياء</option>
                       </select>
                   </div>
                   <div class="col-lg-2 col-md-12 col-12">
                     <label for="">الوحده</label>
                     <select name="" id="" class="form-select" title="اختر">
-                        <option value="">1</option>
-                        <option value="">2</option>
+                        <option value="">الأولي</option>
+                        <option value="">الثانيه</option>
                       </select>
                   </div>
                   <div class="col-lg-2 col-md-12 col-12">
                     <label for="">الدرس</label>
                     <select name="" id="" class="form-select" title="اختر">
-                        <option value="">1</option>
-                        <option value="">2</option>
+                        <option value="">الأول</option>
+                        <option value="">الثاني</option>
                       </select>
                   </div>
                 </div>
@@ -181,15 +181,16 @@
                   <div class="col-lg-3 col-md-12 col-12">
                     <label for=""> نوع السؤال</label>
                     <select name="" id="" class="form-select" title="اختر">
-                      <option value="">1</option>
-                      <option value="">2</option>
+                      <option value="">وصل</option>
+                      <option value="">رتب</option>
                     </select>
                   </div>
                   <div class="col-lg-3 col-md-12 col-12">
                     <label for=""> درجة الصعوبه</label>
                     <select name="" id="" class="form-select" title="اختر">
-                      <option value="">1</option>
-                      <option value="">2</option>
+                      <option value="">سهل</option>
+                      <option value="">صعب</option>
+                      <option value="">أكثر صعوبه</option>
                     </select>
                   </div>
                   <div class="col-lg-3 col-md-12 col-12">
