--- a/add_lesson.html
+++ b/add_lesson.html
@@ -127,7 +127,7 @@
         <!-- end nav -->
         <div class="container">
             <div class="headers">
-                <h4>اضافة ماده جديده </h4>
+                <h4>اضافة درس جديده </h4>
                 
               </div>
     <div class="add-content">
@@ -139,10 +139,10 @@
                         <label for="name">الوحده</label>
     
                         <select class="form-select" aria-label="GFG Select">
-                          <option>1</option>
-                          <option value="GFG1">2</option>
-                          <option value="GFG2">3</option>
-                          <option value="GFG3">4</option>
+                          <option>الأولي</option>
+                          <option value="GFG1">الثانية</option>
+                          <option value="GFG2">الثالثه</option>
+                          <option value="GFG3">الرابعه</option>
                         </select>
                       </div>
                       <div class="col-lg-6 col-md-12 col-12">
