--- a/add_subject.html
+++ b/add_subject.html
@@ -146,30 +146,29 @@
                     <label for="name">نوع التعليم</label>
 
                     <select class="form-select" aria-label="GFG Select">
-                      <option>1</option>
-                      <option value="GFG1">2</option>
-                      <option value="GFG2">3</option>
-                      <option value="GFG3">4</option>
+                      <option>تمهيدي</option>
+                      <option value="GFG1">اساسي</option>
+                      <option value="GFG2">جامعي</option>
                     </select>
                   </div>
                   <div class="col-lg-6 col-md-12 col-12">
                     <label for="name">المرحله</label>
 
                     <select class="form-select" aria-label="GFG Select">
-                      <option>1</option>
-                      <option value="GFG1">2</option>
-                      <option value="GFG2">3</option>
-                      <option value="GFG3">4</option>
+                      <option>الأولي</option>
+                      <option value="GFG1">الثانيه</option>
+                      <option value="GFG2">الثالثه</option>
+                      <option value="GFG3">الربعه</option>
                     </select>
                   </div>
                   <div class="col-lg-6 col-md-12 col-12">
                     <label for="name">السنه</label>
 
                     <select class="form-select" aria-label="GFG Select">
-                      <option>1</option>
-                      <option value="GFG1">2</option>
-                      <option value="GFG2">3</option>
-                      <option value="GFG3">4</option>
+                      <option>الأولي</option>
+                      <option value="GFG1">الثانيه</option>
+                      <option value="GFG2">الثالثه</option>
+                      <option value="GFG3">الربعه</option>
                     </select>
                   </div>
                 </div>
