--- a/add_exam.html
+++ b/add_exam.html
@@ -10,6 +10,7 @@
     <!-- ? Custom CSS -->
     <link rel="stylesheet" href="css/dataTables.bootstrap5.min.css" />
     <link rel="stylesheet" href="css/nasra.css" />
+    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
     <!-- ? Custom CSS -->
     <!-- ? Main JavaScript -->
     <script src="js/jquery-3.5.1.min.js"></script>
@@ -290,7 +291,7 @@
                     المزيد من الاسالة
                   </p>
                   <div class="add_form w-100 row">
-                    <div class="col-lg-6 col-md-12 col-12">
+                    <div class="col-lg-12 col-md-12 col-12">
                       <label for=""> نوع السؤال</label>
                       <select
                         name=""
@@ -298,19 +299,13 @@
                         class="form-select "
                         title="اختر"
                       >
-                        <option value="">مجموعة 1</option>
-                        <option value="">مجموعة 2</option>
+                        <option value="">وصل</option>
+                        <option value="">رتب</option>
                       </select>
                     </div>
-                    <div class="col-lg-6 col-md-12 col-12">
+                    <div class="col-lg-12 col-md-12 col-12">
                       <label for="">اسم السؤال</label>
-                      <input
-                        type="text"
-                        name=""
-                        id=""
-                        class="form-control"
-                        placeholder="اكتب اسم السؤال"
-                      />
+                      <textarea id="summernote" name="editordata"></textarea>
                     </div>
 
                     <div class="col-lg-12 col-md-12 col-12">
@@ -324,10 +319,13 @@
                             class="form-control"
                             placeholder=""
                           />
+                          <input type="file" />
+  
                           <button type="button" class="remove btn">x</button>
+  
                           <input
                             type="radio"
-                            class="form-check-input nsa"
+                            class="form-check-input"
                             name="radioAnswer"
                             id=""
                             checked
@@ -335,11 +333,7 @@
                         </div>
                       </div>
                       <small class="d-block text-start"
-                        ><button
-                          id="btnAddNew"
-                          class="btn btnAdd"
-                          type="button"
-                        >
+                        ><button id="btnAddNew" class="btn btnAdd" type="button">
                           + إضافة إجابة اخري
                         </button></small
                       >
@@ -358,8 +352,9 @@
                           return (
                             '<div class="d-flex align-items-center append_answer">' +
                             '<input type="text" name="" id="" class="form-control" placeholder="">' +
+                            '<input type="file">' +
                             '<button type="button" class="remove btn">x</button>' +
-                            '<input type="radio" class="form-check-input nsa" name="radioAnswer" id="">' +
+                            '<input type="radio" class="form-check-input" name="radioAnswer" id="">' +
                             "</div>"
                           );
                         }
@@ -550,10 +545,14 @@
           }
         });
       </script>
+      <script>
+        $(document).ready(function() {
+            $('#summernote').summernote();
+        });
+      </script>
       <!-- ======= Chart onload =========== -->
       <script src="js/main.js"></script>
-      <script src="js/counterup.min.js"></script>
-      <script src="js/waypoints.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
     </div>
   </body>
 </html>
