--- a/lesson.html
+++ b/lesson.html
@@ -128,13 +128,8 @@
         <div class="container">
           <div class="subjects">
             <div class="headers">
-              <h4>الوحدات</h4>
+              <h4>الدروس</h4>
               <div class="buttons">
-                <a href="add_unit.html">
-                  <button type="button" class="btn btn-success">
-                    اضافة وحده +
-                  </button>
-                </a>
                 <a href="add_lesson.html">
                   <button type="button" class="btn btn-success">
                     اضافة درس +
@@ -147,7 +142,6 @@
                 <table class="table">
                   <thead>
                     <tr>
-                      <th scope="col">اسم الوحده</th>
                       <th scope="col">الدروس</th>
                       <th scope="col">عدد الاسئله</th>
                       <th scope="col">actions</th>
@@ -155,8 +149,7 @@
                   </thead>
                   <tbody>
                     <tr>
-                      <td scope="row">الوحده الأولي</td>
-                      <td><a href="lesson.html">الدرس الأول</a></td>
+                      <td>الدرس الأول</td>
                       <td>60</td>
                       <td>
                         <a href="#"> <i class="fa-solid fa-eye"></i></a>
@@ -165,8 +158,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td scope="row">الوحده الأولي</td>
-                      <td><a href="lesson.html">الدرس الأول</a></td>
+                      <td>الدرس الأول</td>
                       <td>60</td>
                       <td>
                         <a href="#"> <i class="fa-solid fa-eye"></i></a>
@@ -175,8 +167,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td scope="row">الوحده الأولي</td>
-                      <td><a href="lesson.html">الدرس الأول</a></td>
+                      <td>الدرس الأول</td>
                       <td>60</td>
                       <td>
                         <a href="#"> <i class="fa-solid fa-eye"></i></a>
